--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	
 	
     
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -18,6 +19,7 @@
 	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 	<script src="./js/gmaps.min.js" defer></script>
+	
 	
 
     <title>La chouette agence web à Lyon</title>
@@ -49,7 +51,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html">contact &gt;</a>
+						<a href="contact.html">contact &gt;</a>
 					</li>
 				</ul>
 				</div>
@@ -68,7 +70,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -206,7 +208,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h3>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
