Insertion d'attributs aria

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" aria-label="Accueil : accédez à la page d'accueil">Accueil</a><!--Ajout attribut aria-->
 					</li>
 					<li>
 					</li>
@@ -105,7 +105,7 @@
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyer : Cliquer ici pour envoyer le formulaire">
 						Envoyer
 					</button>
 				</form>
@@ -136,22 +136,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://www.twitter.com" aria-label="Twitter : Suivez nous sur twitter" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Twitter"><span class="fa fa-twitter icon-md"></span></a><!--Ajout attribut aria-->
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com" aria-label="Facebook : Suivez nous sur facebook" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.dribbble.com" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://www.dribbble.com" aria-label="Dribbble : Suivez nous sur Dribbble" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com" aria-label="Instagram : Suivez nous sur Instagram" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Instagram"><span class="fa fa-instagram icon-md"></span></a><!--Ajout attribut aria : une bonne pratique consiste à renseigner cet attribut en commençant par la reprise de l'intitulé puis en terminant par l'info permettant de rendre explicite le lien-->
 						</div>
 					</div>
 				</div>
