Insertion attributs aria

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="contact.html">contact &gt;</a>
+						<a href="contact.html" aria-label="Contact : contactez notre agence grâce à notre formulaire">contact &gt;</a> <!--Ajout d'un attribut aria-label pour rendre le lien contact explicite -->
 					</li>
 				</ul>
 				</div>
@@ -70,7 +70,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" aria-label="Contact : accédez à la page contact formulaire" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a><!--Ajout attribut aria-->
 				</div>
 			</div>
 		</div>
@@ -208,7 +208,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h3>
 			<div class="col-sm-12 text-center">
-				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html" aria-label="Contact : accédez à la page contact formulaire" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a><!--Ajout aria-label-->
 			</div>
 		</div>
 	</div>
