--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	
 	
     
@@ -123,8 +123,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web Lyon, web design Lyon, stratégie web" src="img/citation copie.png" />
-
+				<h3>"La chouette agence est une excellente agence web! Les webs designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br> Maxime Guibard, PDG de À vos fourchettes</h3>
 			</div>
 		</div>
 	</div>
@@ -140,7 +139,7 @@
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h3>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -223,6 +222,26 @@
 				<p class="text-center white">
 					La chouette agence - Agence web basée à Lyon.
 				</p>
+				<div class="row row-no-gutters social">
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.twitter.com" aria-label="Twitter : Suivez nous sur twitter" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Twitter"><span class="fa fa-twitter icon-md"></span></a><!--Ajout attribut aria-->
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.facebook.com" aria-label="Facebook : Suivez nous sur facebook" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Facebook"><span class="fa fa-facebook icon-md"></span></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.dribbble.com" aria-label="Dribbble : Suivez nous sur Dribbble" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.instagram.com" aria-label="Instagram : Suivez nous sur Instagram" target="_blank" rel="noopener noreferrer" title="Suivez nous sur Instagram"><span class="fa fa-instagram icon-md"></span></a><!--Ajout attribut aria : une bonne pratique consiste à renseigner cet attribut en commençant par la reprise de l'intitulé puis en terminant par l'info permettant de rendre explicite le lien-->
+						</div>
 					</div>
 				</div>
 			</div>
