--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		</nav>
 	</div>
 </div>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -222,6 +223,7 @@
 				<p class="text-center white">
 					La chouette agence - Agence web basée à Lyon.
 				</p>
+				</div>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
@@ -245,6 +247,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	
 
